<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AlumniConnectionApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="animation_string1">Welcome to Alumni Connection!!</string>
    <string name="animation_string2">Try the full website!!</string>
    <string name="email_prompt">Email</string>
    <string name="password_prompt">Password</string>
    <string name="sign_in_button">Sign In </string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="menu_add_post">Write Post</string>
    <string name="server">Server Url</string>
    <string name="menu_log_out">Log Out</string>

</resources>