<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity" >
    
    <ViewFlipper android:id="@+id/flipper"
		android:layout_width="match_parent" android:layout_height="wrap_content"
		android:flipInterval="2000" android:layout_marginBottom="20dip">
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal"
			android:textSize="26sp" android:text="@string/animation_string1" />
		<TextView android:layout_width="match_parent"
			android:layout_height="wrap_content" android:gravity="center_horizontal"
			android:textSize="26sp" android:text="@string/animation_string2" />
	</ViewFlipper>
	
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_prompt"
        android:inputType="textEmailAddress" 
        android:layout_below="@id/flipper"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    
    <EditText 
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_prompt"
        android:inputType="textPassword"
        android:layout_below="@id/email"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    
    <EditText 
        android:id="@+id/server_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/server"
        android:inputType="textUri"
        android:layout_below="@id/password"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"/>
    
    
    
    <Button
                android:id="@+id/sign_in_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_button"
                android:layout_below="@id/server_url" />

</RelativeLayout>